src/command/config/show/snapshots/rover__command__config__show__output__tests__text_names_every_setting_the_profile_and_the_credential_origin.snap
---
source: src/command/config/show/output.rs
expression: text
---
Profile: staging (explicit)
Credential: present (profile)

┌───────────────────────────┬──────────────────────────────────────┬────────────────────┐
│ Setting                   ┆ Value                                ┆ Source             │
╞═══════════════════════════╪══════════════════════════════════════╪════════════════════╡
│ APOLLO_REGISTRY_URL       ┆ https://registry.staging.example.com ┆ profile (explicit) │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ APOLLO_TELEMETRY_DISABLED ┆ false                                ┆ built-in default   │
└───────────────────────────┴──────────────────────────────────────┴────────────────────┘
