src/command/config/show/snapshots/rover__command__config__show__output__tests__text_reports_no_credential_when_absent.snap
---
source: src/command/config/show/output.rs
expression: text
---
Profile: staging (explicit)
Credential: none

┌───────────────────────────┬──────────────────────────────────────┬────────────────────┐
│ Setting                   ┆ Value                                ┆ Source             │
╞═══════════════════════════╪══════════════════════════════════════╪════════════════════╡
│ APOLLO_REGISTRY_URL       ┆ https://registry.staging.example.com ┆ profile (explicit) │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ APOLLO_TELEMETRY_DISABLED ┆ false                                ┆ built-in default   │
└───────────────────────────┴──────────────────────────────────────┴────────────────────┘
